--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -25,6 +25,14 @@ persons:
     - person: mohammed-bin-zayed
       type: brother
       note: Figli Sheikh Zayed, famiglia Al Nahyan
+  ag-sulzberger:
+    born: 1980
+    nationality: USA
+    family: ochs-sulzberger
+    affiliations:
+    - org: new-york-times
+      role: publisher
+      from: 2018
   ajit-jain:
     born: 1951
     nationality: IND
@@ -275,6 +283,18 @@ persons:
     - org: governo-germania
       role: minister
       from: 2021
+  antonio-angelucci:
+    born: 1946
+    nationality: Italia
+    note: deputato, imprenditore sanità privata
+    affiliations:
+    - org: libero-quotidiano
+      role: owner
+    - org: il-tempo
+      role: owner
+    - org: il-giornale
+      role: owner
+      from: 2024
   antonio-di-pietro:
     born: 1950
     nationality: ITA
@@ -348,6 +368,14 @@ persons:
       role: chairman
       from: 2015
       to: 2018
+  bernard-arnault:
+    born: 1949
+    nationality: Francia
+    note: LVMH, richest person Europe
+    affiliations:
+    - org: lvmh
+      role: chairman
+      from: 1989
   bernhard-lippe-biesterfeld:
     born: 1911
     died: 2004
@@ -500,6 +528,14 @@ persons:
       role: chairman
       from: 2023
       note: Board Chair
+  brian-roberts:
+    born: 1959
+    nationality: USA
+    family: roberts
+    affiliations:
+    - org: comcast
+      role: chairman
+      from: 2002
   bud-walton:
     born: 1921
     died: 1995
@@ -651,6 +687,15 @@ persons:
       role: founder
       from: 1994
       note: Founder, Chairperson
+  cyrille-bollore:
+    born: 1986
+    nationality: FRA
+    note: CEO Bollore SA dal 2019. Son of Vincent
+    affiliations:
+    - org: bollore-group
+      role: executive
+      from: 2019
+      note: CEO
   daniel-daniello:
     born: 1946
     nationality: USA
@@ -667,6 +712,10 @@ persons:
       role: advisor
       from: 1958
       to: 1971
+  daniel-kretinsky:
+    born: 1975
+    nationality: Repubblica Ceca
+    note: energy, media investor
   daria-kaleniuk:
     born: 1985
     nationality: UKR
@@ -939,10 +988,14 @@ persons:
       note: Head of the Commonwealth
   elon-musk:
     born: 1971
-    nationality: USA
+    nationality: USA/South Africa
+    note: 'tech billionaire #1 Forbes'
     affiliations:
     - org: tesla
       role: executive
+      from: 2008
+    - org: tesla
+      role: ceo
       from: 2008
     - org: spacex
       role: founder
@@ -962,6 +1015,15 @@ persons:
       from: 2015
       to: 2018
       note: Co-chair, left board 2018
+  emilio-azcarraga-jean:
+    born: 1968
+    nationality: Mexican
+    note: Ex-Chairman Televisa. Resigned Oct 2024 amid FIFA bribery probe. ~43% via trust
+    affiliations:
+    - org: grupo-televisa
+      role: chairman
+      to: 2024
+      note: Resigned Oct 2024
   emmanuel-macron:
     born: 1977
     nationality: FRA
@@ -1156,6 +1218,17 @@ persons:
       role: executive
       from: 1998
       to: 1999
+  franco-caltagirone:
+    born: 1943
+    nationality: Italia
+    note: costruttore, editore
+    affiliations:
+    - org: il-messaggero
+      role: owner
+    - org: il-mattino
+      role: owner
+    - org: il-gazzettino
+      role: owner
   franco-maria-malfatti:
     born: 1927
     died: 1991
@@ -1212,6 +1285,15 @@ persons:
       from: 1943
       to: 1945
       note: OSS Romania
+  friede-springer:
+    born: 1942
+    nationality: DEU
+    note: Widow of Axel Springer, majority owner Axel Springer SE
+    affiliations:
+    - org: axel-springer
+      role: owner
+      from: 1985
+      note: Majority shareholder with Döpfner (95%)
   friedrich-merz:
     born: 1955
     nationality: german
@@ -1284,6 +1366,13 @@ persons:
       role: executive
       from: 1981
       to: 1985
+  gautam-adani:
+    born: 1962
+    nationality: Indian
+    note: Chairman Adani Group. Close to Modi. Media acquisitions 2022-23
+    affiliations:
+    - org: adani-group
+      role: chairman
   gavin-newsom:
     born: 1967
     nationality: USA
@@ -2071,6 +2160,12 @@ persons:
     born: 1948
     nationality: USA
     family: walton
+  joao-roberto-marinho:
+    nationality: Brazilian
+    note: Chairman Grupo Globo. Forbes $4.3B
+    affiliations:
+    - org: grupo-globo
+      role: chairman
   joe-biden:
     born: 1942
     nationality: USA
@@ -2259,6 +2354,14 @@ persons:
       role: chairman
       from: 2024
       note: Chair (2024), Co-Managing Partner 2016-2024, founded Credit 1998
+  jonathan-rothermere:
+    born: 1967
+    nationality: UK
+    family: rothermere
+    affiliations:
+    - org: daily-mail
+      role: chairman
+      from: 1998
   jose-barroso:
     born: 1956
     nationality: PRT
@@ -2309,6 +2412,10 @@ persons:
     - org: wef
       role: glt
       from: 1993
+    - org: news-corp
+      role: board
+      from: 2013
+      note: Independent Non-Executive Director
     - org: governo-spagna
       role: leader
       from: 1996
@@ -2329,6 +2436,13 @@ persons:
       role: executive
       from: 2021
       note: Co-CEO
+  joseph-oughourlian:
+    born: 1971
+    nationality: Francia
+    note: hedge fund manager, Amber Capital
+    affiliations:
+    - org: amber-capital
+      role: founder
   joshua-bekenstein:
     nationality: USA
     affiliations:
@@ -2556,6 +2670,10 @@ persons:
     nationality: USA
     family: murdoch
     affiliations:
+    - org: news-corp
+      role: chairman
+      from: 2023
+      note: Executive Chairman
     - org: fox-corporation
       role: chairman-ceo
       from: 2019
@@ -2566,14 +2684,12 @@ persons:
   larry-ellison:
     born: 1944
     nationality: USA
+    family: ellison
     affiliations:
     - org: tesla
       role: board
       from: 2018
       to: 2022
-    - org: x-twitter
-      role: shareholder
-      from: 2022
     - org: oracle
       role: founder
       from: 1977
@@ -2603,6 +2719,9 @@ persons:
       role: donor
       from: 2021
       note: 257m-gbp-donation
+    - org: paramount-global
+      role: controlling shareholder
+      from: 2025
   larry-fink:
     born: 1952
     nationality: USA
@@ -2670,6 +2789,14 @@ persons:
       role: executive
       from: 1984
       to: 1989
+  lee-jae-yong:
+    born: 1968
+    nationality: Korean
+    note: Executive Chairman Samsung. AKA Jay Y. Lee. Convicted of bribery, pardoned
+    affiliations:
+    - org: samsung
+      role: chairman
+      from: 2022
   leo-varadkar:
     born: 1979
     nationality: IRL
@@ -2747,6 +2874,19 @@ persons:
     died: 1879
     nationality: UK
     family: rothschild
+  liz-mohn:
+    born: 1941
+    nationality: DEU
+    note: Widow Reinhard Mohn. 5th generation. Supervisory Board Bertelsmann. Connected to Klaus Schwab
+    affiliations:
+    - org: bertelsmann
+      role: board
+      from: 2009
+      note: Supervisory Board
+    - org: bertelsmann-stiftung
+      role: board
+      from: 1999
+      note: Honorary Board of Trustees
   lord-carrington:
     born: 1919
     died: 2018
@@ -2905,6 +3045,14 @@ persons:
       role: executive
       from: 2006
       to: 2017
+  margarita-simonyan:
+    born: 1980
+    nationality: Russian
+    note: Editor-in-Chief RT since 2005. Key figure Russian information war
+    affiliations:
+    - org: rt
+      role: editor-in-chief
+      from: 2005
   margaritis-schinas:
     born: 1962
     nationality: GRC
@@ -2924,6 +3072,14 @@ persons:
     - org: bilderberg
       role: steering
       note: Co-Chair Bilderberg Meetings
+  marina-berlusconi:
+    born: 1966
+    nationality: Italia
+    family: berlusconi
+    affiliations:
+    - org: fininvest
+      role: chairman
+      from: 2023
   mario-draghi:
     born: 1947
     nationality: ITA
@@ -2992,6 +3148,7 @@ persons:
   mark-zuckerberg:
     born: 1984
     nationality: USA
+    note: 'tech billionaire #3 Forbes'
     affiliations:
     - org: wef
       role: ygl
@@ -3009,6 +3166,13 @@ persons:
       role: member
     - org: breakthrough-energy
       role: founder
+  martin-bouygues:
+    born: 1952
+    nationality: Francia
+    family: bouygues
+    affiliations:
+    - org: bouygues
+      role: chairman
   martin-winterkorn:
     born: 1947
     nationality: DEU
@@ -3057,6 +3221,22 @@ persons:
       role: founder
       from: 2017
       note: Created with PIF Saudi
+  mathias-dopfner:
+    born: 1963
+    nationality: DEU
+    note: CEO Axel Springer, Bilderberg Steering Committee, board Netflix/Warner Music
+    affiliations:
+    - org: bilderberg
+      role: steering
+      from: 2018
+      note: Steering Committee, participant since 2007
+    - org: wef
+      role: member
+      note: Davos participant
+    - org: axel-springer
+      role: executive
+      from: 2002
+      note: CEO
   matteo-renzi:
     born: 1975
     nationality: ITA
@@ -3094,6 +3274,14 @@ persons:
     died: 1812
     nationality: Germania
     family: rothschild
+  michael-bloomberg:
+    born: 1942
+    nationality: USA
+    note: 'tech billionaire #13 Forbes, ex-Mayor NYC'
+    affiliations:
+    - org: bloomberg-lp
+      role: founder
+      from: 1981
   michael-hayden:
     born: 1945
     nationality: USA
@@ -3252,7 +3440,8 @@ persons:
       note: Vice Presidente, Primo Ministro, Ruler Dubai
   mohammed-bin-salman:
     born: 1985
-    nationality: SAU
+    nationality: Saudi
+    note: Crown Prince Saudi Arabia, Chair PIF
     affiliations:
     - org: pif-saudi
       role: chairman
@@ -3261,6 +3450,8 @@ persons:
       role: leader
       from: 2017
       note: Crown Prince, de facto ruler, Chairman PIF
+    - org: pif
+      role: chairman
     relations:
     - person: salman-bin-abdulaziz
       type: son
@@ -3302,6 +3493,13 @@ persons:
     died: 1830
     nationality: Germania
     family: warburg
+  mukesh-ambani:
+    born: 1957
+    nationality: Indian
+    note: Chairman Reliance. Net worth $100B+. Close to Modi government
+    affiliations:
+    - org: reliance-industries
+      role: chairman
   mykhailo-fedorov:
     born: 1991
     nationality: UKR
@@ -3499,6 +3697,14 @@ persons:
       note: CEO
     - org: ac-milan
       role: chairman
+      from: 2018
+  patrick-soon-shiong:
+    born: 1952
+    nationality: USA
+    note: biotech billionaire
+    affiliations:
+    - org: los-angeles-times
+      role: owner
       from: 2018
   patrick-vallance:
     born: 1960
@@ -3719,6 +3925,14 @@ persons:
       from: 2011
       to: 2013
       note: Vice-Chancellor, Economics
+  pier-silvio-berlusconi:
+    born: 1969
+    nationality: Italia
+    family: berlusconi
+    affiliations:
+    - org: mediaset-mfe
+      role: ceo
+      from: 2023
   pierre-s-dupont:
     born: 1870
     died: 1954
@@ -3809,6 +4023,14 @@ persons:
     - org: fii-saudi
       role: member
       note: Speaker FII7, FII9
+  recep-tayyip-erdogan:
+    born: 1954
+    nationality: Turkish
+    note: President Turkey since 2014. PM 2003-2014
+    affiliations:
+    - org: governo-turchia
+      role: president
+      from: 2014
   reid-hoffman:
     nationality: USA
     affiliations:
@@ -3831,6 +4053,20 @@ persons:
       role: partner
       from: 2009
       note: General Partner
+  reinhard-mohn:
+    born: 1921
+    died: 2009
+    nationality: DEU
+    note: Patriarch Bertelsmann. Built global empire. Founded Bertelsmann Stiftung 1977
+    affiliations:
+    - org: bertelsmann
+      role: chairman
+      from: 1947
+      to: 2009
+      note: Built global empire
+    - org: bertelsmann-stiftung
+      role: founder
+      from: 1977
   riccardo-gallo:
     born: 1937
     nationality: ITA
@@ -3981,6 +4217,21 @@ persons:
     - org: citigroup
       role: advisor
       from: 1999
+  roberto-marinho:
+    born: 1904
+    died: 2003
+    nationality: Brazilian
+    note: Built Globo into media empire. Founder TV Globo 1965
+    affiliations:
+    - org: grupo-globo
+      role: founder
+  rodolphe-saade:
+    born: 1970
+    nationality: Francia/Libano
+    note: shipping magnate, CMA CGM
+    affiliations:
+    - org: cma-cgm
+      role: chairman
   rolly-van-rappard:
     nationality: NLD
     affiliations:
@@ -4221,6 +4472,11 @@ persons:
       role: leader
       from: 2004
       to: 2014
+  silvio-berlusconi:
+    born: 1936
+    died: 2023
+    nationality: Italia
+    family: berlusconi
   simon-harris:
     born: 1986
     nationality: IRL
@@ -4396,6 +4652,25 @@ persons:
       from: 2013
       to: 2025
       note: President (Honorary President for Life post-2025)
+  thomas-coesfeld:
+    born: 1979
+    nationality: DEU
+    note: CEO Bertelsmann from 2027. 7th generation Mohn. Grandson Reinhard Mohn
+    affiliations:
+    - org: bertelsmann
+      role: executive
+      from: 2027
+      note: CEO designato
+  thomas-rabe:
+    born: 1965
+    nationality: DEU
+    note: CEO Bertelsmann 2012-2026. CEO RTL Group. Non-family
+    affiliations:
+    - org: bertelsmann
+      role: executive
+      from: 2012
+      to: 2026
+      note: CEO
   tim-cook:
     born: 1960
     nationality: USA
@@ -4473,6 +4748,17 @@ persons:
     died: 2004
     nationality: Italia
     family: agnelli-elkann
+  urbano-cairo:
+    born: 1957
+    nationality: Italia
+    note: editore, ex-agente pubblicitario
+    affiliations:
+    - org: rcs-mediagroup
+      role: chairman
+      from: 2016
+    - org: cairo-communication
+      role: founder
+      from: 1995
   ursula-von-der-leyen:
     born: 1958
     nationality: DEU
@@ -4517,6 +4803,19 @@ persons:
     died: 1990
     nationality: UK
     family: rothschild
+  vincent-bollore:
+    born: 1952
+    nationality: FRA
+    note: Conservative Catholic media mogul. France Murdoch. €9.9B fortune. Retired 2022 but controls
+    affiliations:
+    - org: vivendi
+      role: owner
+      from: 2012
+      note: Controlling shareholder 29.9%
+    - org: bollore-group
+      role: founder
+      from: 1981
+      note: Controlling shareholder via Financiere de l Odet
   vitali-klitschko:
     born: 1971
     nationality: UKR
@@ -4525,6 +4824,14 @@ persons:
       role: member
       from: 2014
       note: Mayor Kyiv, regular Davos speaker
+  vladimir-putin:
+    born: 1952
+    nationality: Russian
+    note: President Russia 2000-2008, 2012-present. PM 2008-2012
+    affiliations:
+    - org: governo-russia
+      role: president
+      from: 2000
   volodymyr-zelensky:
     born: 1978
     nationality: UKR
@@ -4535,6 +4842,13 @@ persons:
     - org: governo-ucraina
       role: leader
       from: 2019
+  waleed-al-ibrahim:
+    nationality: Saudi
+    note: MBC founder. Detained Ritz-Carlton 2017. Now minority shareholder
+    affiliations:
+    - org: mbc-group
+      role: founder
+      from: 1991
   walter-hallstein:
     born: 1901
     died: 1982
@@ -4641,6 +4955,34 @@ persons:
       role: chairman
     - org: porsche-ag
       role: chairman
+  xavier-niel:
+    born: 1967
+    nationality: Francia
+    note: fondatore Free, tech billionaire
+    affiliations:
+    - org: le-monde
+      role: controlling shareholder
+    - org: free-iliad
+      role: founder
+  xi-jinping:
+    born: 1953
+    nationality: Chinese
+    note: General Secretary CCP since 2012. President since 2013
+    affiliations:
+    - org: ccp
+      role: general-secretary
+      from: 2012
+  yannick-bollore:
+    born: 1980
+    nationality: FRA
+    note: Chair Vivendi, Chair Havas. Son of Vincent
+    affiliations:
+    - org: vivendi
+      role: chairman
+      from: 2018
+    - org: havas
+      role: chairman
+      from: 2013
   yasir-al-rumayyan:
     born: 1970
     nationality: SAU
@@ -4691,6 +5033,12 @@ persons:
     - org: idf
       role: member
       note: Military service before Mossad career
+  yousef-obaidly:
+    nationality: QAT
+    affiliations:
+    - org: bein-media
+      role: executive
+      note: CEO
   zalmay-khalilzad:
     born: 1951
     nationality: USA
