--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -39,6 +39,15 @@ persons:
     affiliations:
     - org: berkshire-hathaway
       role: chairman
+  akio-toyoda:
+    born: 1956
+    nationality: JPN
+    note: Chairman Toyota (2023-). CEO 2009-2023. Great-grandson of founder.
+    affiliations:
+    - org: toyota
+      role: chairman
+      from: 2023
+      note: CEO 2009-2023
   al-gore:
     born: 1948
     nationality: USA
@@ -442,6 +451,15 @@ persons:
     - org: clinton-foundation
       role: founder
       from: 2001
+  bill-ford-jr:
+    born: 1957
+    nationality: USA
+    family: ford-family
+    note: Executive Chairman Ford. Owns 23% of Class B shares. Great-grandson of Henry Ford.
+    affiliations:
+    - org: ford-motor
+      role: executive-chairman
+      from: 1999
   bill-gates:
     born: 1955
     nationality: USA
@@ -554,6 +572,16 @@ persons:
       role: leader
       from: 1979
       to: 1993
+  carlos-tavares:
+    born: 1958
+    nationality: PRT
+    note: Ex-CEO Stellantis (2021-2024). Resigned Dec 2024 after conflict with Elkann.
+    affiliations:
+    - org: stellantis
+      role: ceo
+      from: 2021
+      to: 2024
+      note: Resigned December 2024
   cc-wei:
     born: 1955
     nationality: TWN
@@ -635,6 +663,15 @@ persons:
       from: 2019
     - org: governo-canada
       role: minister
+      from: 2020
+  chung-eui-sun:
+    born: 1970
+    nationality: KOR
+    family: chung
+    note: Executive Chairman Hyundai Motor Group. Son of Chung Mong-koo.
+    affiliations:
+    - org: hyundai-motor
+      role: executive-chairman
       from: 2020
   cofer-black:
     born: 1950
@@ -997,6 +1034,10 @@ persons:
     - org: tesla
       role: ceo
       from: 2008
+    - org: tesla
+      role: ceo
+      from: 2008
+      note: Owns 13%
     - org: spacex
       role: founder
       from: 2002
@@ -1685,6 +1726,22 @@ persons:
       role: president
       from: 1950
       to: 1972
+  henri-de-castries:
+    born: 1954
+    nationality: FRA
+    affiliations:
+    - org: bilderberg
+      role: steering
+      note: Steering Committee
+    - org: stellantis
+      role: board
+      from: 2021
+      note: Senior Independent Director
+    - org: axa
+      role: executive
+      from: 2000
+      to: 2016
+      note: CEO
   henry-dupont:
     born: 1812
     died: 1889
@@ -2215,10 +2272,18 @@ persons:
     - org: bilderberg
       role: steering
       from: 2015
+    - org: bilderberg
+      role: board
+      from: 2012
+      to: 2020
+      note: Regular participant
     - org: aspen-institute
       role: leader
     - org: exor
       role: chairman
+      from: 2010
+    - org: exor
+      role: ceo
       from: 2010
     - org: stellantis
       role: chairman
@@ -2861,6 +2926,14 @@ persons:
     - org: boyu-capital
       role: investor
       note: Early investor via Li Ka Shing Foundation, helped raise $1B first fund
+  li-shufu:
+    born: 1963
+    nationality: CHN
+    note: Founder Chairman Geely. Acquired Volvo, Lotus, 10% Mercedes. Self-made billionaire.
+    affiliations:
+    - org: geely
+      role: founder-chairman
+      from: 1986
   liad-avraham:
     nationality: ISR
     note: Paragon VP Research
@@ -3655,6 +3728,24 @@ persons:
       role: executive
       from: 2023
       note: CEO
+  norbert-reithofer:
+    born: 1956
+    nationality: DEU
+    affiliations:
+    - org: bmw
+      role: chairman
+      from: 2015
+      to: 2025
+      note: Chairman Supervisory Board (CEO 2006-2015)
+  ola-kallenius:
+    born: 1969
+    nationality: SWE
+    note: First non-German CEO Mercedes. Swedish-German dual citizen.
+    affiliations:
+    - org: mercedes-benz
+      role: executive
+      from: 2019
+      note: Chairman of the Board of Management (CEO)
   olaf-lies:
     born: 1967
     nationality: DEU
@@ -3676,6 +3767,14 @@ persons:
       role: executive
       from: 2015
       to: 2025
+  oliver-zipse:
+    born: 1964
+    nationality: DEU
+    affiliations:
+    - org: bmw
+      role: executive
+      from: 2019
+      note: Chairman of the Board of Management (CEO)
   omri-lavie:
     nationality: ISR
     note: NSO Group co-founder, Unit 8200 veteran
@@ -3840,6 +3939,20 @@ persons:
       role: founder
       from: 1985
       to: 2018
+  peter-rawlinson:
+    born: 1957
+    nationality: GBR
+    affiliations:
+    - org: tesla
+      role: executive
+      from: 2009
+      to: 2012
+      note: Chief Engineer Model S
+    - org: lucid-motors
+      role: executive
+      from: 2016
+      to: 2025
+      note: CTO 2016, CEO 2019-2025
   peter-sutherland:
     born: 1946
     died: 2018
@@ -4004,6 +4117,17 @@ persons:
       type: cousin
     - person: marcus-wallenberg-jr
       type: cousin
+  ratan-tata:
+    born: 1937
+    died: 2024
+    nationality: IND
+    family: tata
+    note: Chairman Tata Sons 1991-2012. Acquired JLR 2008. Philanthropist.
+    affiliations:
+    - org: tata-motors
+      role: chairman
+      from: 1991
+      to: 2012
   ray-dalio:
     born: 1949
     nationality: USA
@@ -4200,6 +4324,15 @@ persons:
       role: minister
       from: 1961
       to: 1968
+  robert-peugeot:
+    born: 1950
+    nationality: FRA
+    family: peugeot
+    note: Chair Peugeot Invest. Board Stellantis. 6th generation Peugeot.
+    affiliations:
+    - org: stellantis
+      role: board
+      from: 2021
   robert-rubin:
     born: 1938
     nationality: USA
@@ -4489,6 +4622,16 @@ persons:
       from: 2025
       to: 2025
       note: Tánaiste, Foreign Affairs
+  stefan-quandt:
+    born: 1966
+    nationality: DEU
+    family: quandt
+    note: Owns 26.8% BMW. Deputy Chair Supervisory Board. Net worth $21.6B.
+    affiliations:
+    - org: bmw
+      role: deputy-chairman
+      from: 1999
+      note: Owns 26.8%
   stephan-weil:
     born: 1958
     nationality: DEU
@@ -4611,6 +4754,16 @@ persons:
     - org: apple
       role: board
       from: 2014
+  susanne-klatten:
+    born: 1962
+    nationality: DEU
+    family: quandt
+    note: Owns 19.1% BMW. Also owns Altana. Richest woman in Germany ($26.5B).
+    affiliations:
+    - org: bmw
+      role: board
+      from: 1997
+      note: Owns 19.1%
   t-coleman-dupont:
     born: 1863
     died: 1930
@@ -4858,6 +5011,15 @@ persons:
       role: executive
       from: 1958
       to: 1967
+  wang-chuanfu:
+    born: 1966
+    nationality: CHN
+    note: 'Founder Chairman CEO BYD. Owns 17%. Forbes: China 11th richest ($24.4B).'
+    affiliations:
+    - org: byd
+      role: founder-chairman-ceo
+      from: 1995
+      note: Owns 17%
   warren-buffett:
     born: 1930
     nationality: USA
@@ -4946,13 +5108,20 @@ persons:
       note: Boxing champion, influencer
   wolfgang-porsche:
     born: 1943
-    nationality: DEU
-    family: porsche-piech
+    nationality: DEU/AUT
+    family: toyoda
+    note: Chair Porsche SE, Chair Porsche AG. Son of Ferry Porsche.
     affiliations:
     - org: volkswagen
       role: board
+    - org: volkswagen
+      role: board
+      from: 2008
     - org: porsche-se
       role: chairman
+    - org: porsche-se
+      role: chairman
+      from: 2007
     - org: porsche-ag
       role: chairman
   xavier-niel:
